--- a/action.yml
+++ b/action.yml
@@ -63,6 +63,7 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v3
     - shell: bash
       env:
         POSTGRES_HOST: database
