--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - POSTGRES_PORT=$POSTGRES_PORT
       - POSTGRES_DBNAME=$POSTGRES_DB
       - POSTGRES_USER=$POSTGRES_USER
+      - PGUSER=$POSTGRES_USER
       - POSTGRES_PASS=$POSTGRES_PASSWORD
       - HYDRO_USERNAME=$HYDRO_USERNAME
       - HYDRO_PASSWORD=$HYDRO_PASSWORD
