--- a/action.yml
+++ b/action.yml
@@ -80,4 +80,6 @@ runs:
     - shell: bash
       run: docker exec hydrodump hydrodump run
     - shell: bash
-      run: docker exec database pg_dump --create --jobs 5 --create --dbname ${{ inputs.db }} --username ${{ inputs.dbuser }} | gzip > ${{ inputs.db }}.sql.gz
+      run: |
+        docker exec database pg_dump --create --jobs 5 --create --dbname ${{ inputs.db }} --username ${{ inputs.dbuser }} --file /data/${{ inputs.db }}.sql
+        gzip -c ./data/${{ inputs.db }}.sql > ${{ inputs.db }}.sql.gz
