--- a/action.yml
+++ b/action.yml
@@ -81,5 +81,4 @@ runs:
       run: docker exec hydrodump hydrodump run
     - shell: bash
       run: |
-        docker exec database pg_dump --create --dbname ${{ inputs.db }} --username ${{ inputs.dbuser }} --file /data/${{ inputs.db }}.sql
-        gzip -c ./data/${{ inputs.db }}.sql > ${{ inputs.db }}.sql.gz
+        docker exec database pg_dump --create --clean ${{ inputs.db }} | gzip > ${{ inputs.db }}.sql.gz
