--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - POSTGRES_HOST=$POSTGRES_HOST
       - POSTGRES_PORT=$POSTGRES_PORT
       - POSTGRES_DB=$POSTGRES_DB
+      - PGDATABASE=$POSTGRES_DB
       - POSTGRES_USER=$POSTGRES_USER
       - PGUSER=$POSTGRES_USER
       - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
