--- a/action.yml
+++ b/action.yml
@@ -81,4 +81,10 @@ runs:
       run: docker exec hydrodump hydrodump run
     - shell: bash
       run: |
-        docker exec database pg_dump --create --clean ${{ inputs.db }} | gzip > ${{ inputs.db }}.sql.gz
+        docker exec database \
+          pg_dump \
+            --format=custom \
+            --no-owner \
+            --no-acl \
+            ${{ inputs.db }} \
+            | > ${{ inputs.db }}.dmp
