--- a/action.yml
+++ b/action.yml
@@ -86,5 +86,4 @@ runs:
             --format=custom \
             --no-owner \
             --no-acl \
-            ${{ inputs.db }} \
-            | > ${{ inputs.db }}.dmp
+            ${{ inputs.db }} > ${{ inputs.db }}.dmp
