--- a/action.yml
+++ b/action.yml
@@ -81,8 +81,4 @@ runs:
       run: docker exec hydrodump hydrodump run
     - shell: bash
       run: |
-        docker exec database \
-          pg_dump \
-            --no-owner \
-            --no-acl \
-            ${{ inputs.db }} | gzip > ${{ inputs.db }}.sql.gz
+        docker exec database pg_dump --no-owner --no-acl --clean ${{ inputs.db }} | gzip > ${{ inputs.db }}.sql.gz
