--- a/action.yml
+++ b/action.yml
@@ -80,4 +80,4 @@ runs:
     - shell: bash
       run: docker exec hydrodump hydrodump run
     - shell: bash
-      run: docker exec database pg_dump ${{ inputs.db }} | gzip > ${{ inputs.db }}.sql.gz
+      run: docker exec database pg_dump --data-only | gzip > ${{ inputs.db }}.sql.gz
