--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -8,10 +8,9 @@ jobs:
 
     steps:
     - name: Setup Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v3
       with:
-        python-version: 3.8
-        architecture: x64
+        python-version: "3.10"
     - name: Checkout repository
       uses: actions/checkout@master
     - name: Install flake8
